src/objects/PIR_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Provider_Was_contacted__c</fullName>
        <label>Provider Was contacted?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>No Response</fullName>
                </value>
                <value>
                    <fullName>Submitter to Contact Provider</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Queries__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Queries</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RI_Complaint_Type__c</fullName>
        <label>RI Complaint Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Administrative Issue (Enrollment, Billing)</fullName>
                </value>
                <value>
                    <fullName>Contracting/Credentialing</fullName>
                </value>
                <value>
                    <fullName>Excluded benefit</fullName>
                </value>
                <value>
                    <fullName>Formulary(to include tiering, ST/QL)</fullName>
                </value>
                <value>
                    <fullName>In-Network Access to Care</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Notification and/or Referral Process</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Out-of-network Access to Care</fullName>
                </value>
                <value>
                    <fullName>Prior Auth (Non-Pharmacy)</fullName>
                </value>
                <value>
                    <fullName>Prior Auth (Pharmacy)</fullName>
                </value>
                <value>
                    <fullName>Quality of Care</fullName>
                </value>
                <value>
                    <fullName>Quality of Customer Service</fullName>
                </value>
                <value>
                    <fullName>Silent/Surprise billing</fullName>
                </value>
                <value>
                    <fullName>Termination of Coverage</fullName>
                </value>
                <value>
                    <fullName>Transaction of Care/Continuity of Care</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RI_Summary_of_Provider_Issue__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>RI Summary of Provider Issue</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_Submission_Delay__c</fullName>
        <label>Reason for Submission Delay</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Submitter PTO/Weekend/Holiday</fullName>
                </value>
                <value>
                    <fullName>Additional submitter research/review</fullName>
                </value>
                <value>
                    <fullName>Analyst on PTO, incorrectly routed</fullName>
                </value>
                <value>
                    <fullName>CARCE Team</fullName>
                </value>
                <value>
                    <fullName>Case Cloned Incorrectly</fullName>
                </value>
                <value>
                    <fullName>Held for additional information</fullName>
                </value>
                <value>
                    <fullName>Issue from a previous case</fullName>
                </value>
                <value>
                    <fullName>Submitter Backlog</fullName>
                </value>
                <value>
                    <fullName>Routed to incorrect LOB in error</fullName>
                </value>
                <value>
                    <fullName>Split Case</fullName>
                </value>
                <value>
                    <fullName>Submitter System issues</fullName>
                </value>
                <value>
                    <fullName>Triage Backlog</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region_V_Work_Type__c</fullName>
        <label>Region V Work Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Specialty_Team__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accounts Receivable</fullName>
                </value>
                <value>
                    <fullName>Resolution</fullName>
                </value>
                <value>
                    <fullName>Account Receivable</fullName>
                    <isActive>false</isActive>
                    <label>Account Receivable</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Remark_Explanation_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Remark/Explanation Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reopen_Reason__c</fullName>
        <label>Reopen Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Additional Information Received</fullName>
                </value>
                <value>
                    <fullName>Administrative</fullName>
                </value>
                <value>
                    <fullName>Provider Disagrees - Additional Action Needed</fullName>
                </value>
                <value>
                    <fullName>Provider Disagrees - Supplemental Education</fullName>
                </value>
                <value>
                    <fullName>Service Recovery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reopened_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reopened Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reopened_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reopened Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Root_Cause_1_Key_Code__c</fullName>
        <description>here we will be storing the key code for root cause 1</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Root Cause 1 Key Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Root_Cause_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Root Cause 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Root_Cause_2_Key_Code__c</fullName>
        <description>here we will be storing the key code for root cause 2</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Root Cause 2 Key Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Root_Cause_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Root Cause 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Root_Cause_3_Key_Code__c</fullName>
        <description>here we will be storing the key code for root cause 3</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Root Cause 3 Key Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Root_Cause_3__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Root Cause 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Root_Cause__c</fullName>
        <label>Root Cause</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Root Cause 1</fullName>
                </value>
                <value>
                    <fullName>Root Cause 2</fullName>
                </value>
                <value>
                    <fullName>Root Cause 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SAS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SOBJEXT__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SOBJECT REFERENCE</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SWAT_Awareness_of_Issue__c</fullName>
        <label>SWAT Awareness of Issue?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SWAT_Contact_Partner__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SWAT Contact/Partner</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sources_of_Data__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sources of Data</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specialty_Team__c</fullName>
        <label>Specialty Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Local Ancillary</fullName>
                </value>
                <value>
                    <fullName>National Ancillary</fullName>
                </value>
                <value>
                    <fullName>NE Ancillary</fullName>
                </value>
                <value>
                    <fullName>NE ROS</fullName>
                </value>
                <value>
                    <fullName>Region V</fullName>
                </value>
                <value>
                    <fullName>SNI</fullName>
                </value>
                <value>
                    <fullName>Supervisor Escalation Team</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Status listed as open when case is open and must be closed to close the case</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Reopen</fullName>
                </value>
                <value>
                    <fullName>Additional Information Needed</fullName>
                    <isActive>false</isActive>
                    <label>Additional Information Needed</label>
                </value>
                <value>
                    <fullName>Monitoring</fullName>
                    <isActive>false</isActive>
                    <label>Monitoring</label>
                </value>
                <value>
                    <fullName>New</fullName>
                    <isActive>false</isActive>
                    <label>New</label>
                </value>
                <value>
                    <fullName>OGS</fullName>
                    <isActive>false</isActive>
                    <label>OGS</label>
                </value>
                <value>
                    <fullName>Pending Closed</fullName>
                    <isActive>false</isActive>
                    <label>Pending Closed</label>
                </value>
                <value>
                    <fullName>Reopened</fullName>
                    <isActive>false</isActive>
                    <label>Reopened</label>
                </value>
                <value>
                    <fullName>Triaged</fullName>
                    <isActive>false</isActive>
                    <label>Triaged</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitter_to_Contact_Provider_at_Closure__c</fullName>
        <inlineHelpText>Submitter is responsible to contact the Provider upon closure.</inlineHelpText>
        <label>Submitter to Contact Provider at Closure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Substatus__c</fullName>
        <label>Substatus</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Created In Error</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Issue Resolved</fullName>
                </value>
                <value>
                    <fullName>No Response</fullName>
                </value>
                <value>
                    <fullName>Re-directed</fullName>
                </value>
                <value>
                    <fullName>Resolution Partner to Close</fullName>
                </value>
                <value>
                    <fullName>Split</fullName>
                </value>
                <value>
                    <fullName>Additional Information Needed</fullName>
                    <isActive>false</isActive>
                    <label>Additional Information Needed</label>
                </value>
                <value>
                    <fullName>Additional Information Obtained</fullName>
                    <isActive>false</isActive>
                    <label>Additional Information Obtained</label>
                </value>
                <value>
                    <fullName>Pending Closed</fullName>
                    <isActive>false</isActive>
                    <label>Pending Closed</label>
                </value>
                <value>
                    <fullName>Second Review Required</fullName>
                    <isActive>false</isActive>
                    <label>Second Review Required</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Used_For_Cloning__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to refer if the related case has atleast once used for cloning a case record</description>
        <label>Used For Cloning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>What_will_it_take_to_close_in_Prac_Mgmt__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>What will it take to close in Prac Mgmt?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Will_this_be_closed_in_Practice_Mgmt__c</fullName>
        <label>Will this be closed in Practice Mgmt?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>All Required Information Not Received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>PIR Detail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PIR-{000000}</displayFormat>
        <label>PIR Detail Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PIR Details</pluralLabel>
    <recordTypes>
        <fullName>Proactive_Action_Partner</fullName>
        <active>true</active>
        <label>Proactive Action Partner</label>
    </recordTypes>
    <recordTypes>
        <fullName>Reactive_Resolution_Partners</fullName>
        <active>true</active>
        <label>Reactive Resolution Partners</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>E2E_Close_Case_validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Case__r.RecordType.Name  = &apos;PIP&apos;,OR (ISPICKVAL(Root_Cause__c,&apos;&apos;),ISPICKVAL(Substatus__c,&apos;&apos;)),
ISPICKVAL(Status__c , &apos;Closed&apos;)
 
)</errorConditionFormula>
        <errorMessage>Please provide Mandatory fields: Root Cause and Sub Status</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Exact_count_unknown_is_checked</fullName>
        <active>false</active>
        <description>if Exact Count Unknown; Multiple Claims box is checked then Number of Claims should not be blank</description>
        <errorConditionFormula>AND(
     Exact_Count_Unknown_Multiple_Claims__c,
     NOT(ISNULL(Number_of_Claims__c))
     
)</errorConditionFormula>
        <errorMessage>If Multiple Claims box is checked then Number of Claims should be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Exact_count_unknown_is_not_checked</fullName>
        <active>false</active>
        <description>if Exact Count Unknown; Multiple Claims box is not checked then Number of Claims should be blank</description>
        <errorConditionFormula>AND(
    NOT(Exact_Count_Unknown_Multiple_Claims__c),	
    ISBLANK(Number_of_Claims__c)     
   
)</errorConditionFormula>
        <errorMessage>if Exact Count Unknown; Multiple Claims box is not checked then Number of Claims should not be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FAST_Close_Case_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Case__r.RecordType.Name  = &apos;FAST&apos;,ISPICKVAL(Status__c , &apos;Closed&apos;),OR (ISPICKVAL(Will_this_be_closed_in_Practice_Mgmt__c,&apos;&apos;),ISPICKVAL(Claims_Overturned__c,&apos;&apos;),
ISPICKVAL(Closure_Sub_Status__c,&apos;&apos;), ISPICKVAL( Provider_Was_contacted__c,&apos;&apos;)
 

)

)</errorConditionFormula>
        <errorMessage>Please provide Mandatory fields: Will this be closed in Practice Mgmt? / Claims Overturned? / Closure Sub Status  / Provider Was contacted?</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FAST_Monitor_Only_Mandatory</fullName>
        <active>false</active>
        <description>Yes, if status = Monitoring</description>
        <errorConditionFormula>ISPICKVAL(Status__c , &quot;Monitoring&quot;) &amp;&amp;  ISBLANK( Monitor_Only_Date__c )</errorConditionFormula>
        <errorDisplayField>Monitor_Only_Date__c</errorDisplayField>
        <errorMessage>Please enter the monitoring date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Ignore_Reopen_Change_authorization_Check</fullName>
        <active>false</active>
        <description>Ignore Reopen can only be changed by either OPO PIR, Supervisor/SME or Owner of the case.</description>
        <errorConditionFormula>AND(ISCHANGED(Ignore_Reopen__c) ,
$UserRole.Name &lt;&gt; &quot;OPO_PIR&quot;,
$UserRole.Name &lt;&gt; &quot;PIR_Reactive_Proactive_Supervisor&quot;, 
OwnerId &lt;&gt; $User.Id 
)</errorConditionFormula>
        <errorDisplayField>Ignore_Reopen__c</errorDisplayField>
        <errorMessage>Ignore Reopen can only be changed by either OPO PIR, Supervisor/SME or Owner of the case.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Make_E2E_Priority_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL( Governance_Status__c , &apos;Approved&apos;),
ISBLANK(TEXT(E2E_Priority__c))
)</errorConditionFormula>
        <errorDisplayField>E2E_Priority__c</errorDisplayField>
        <errorMessage>E2E Priority  field is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Make_Governance_Comments_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
OR
(
ISPICKVAL( Governance_Status__c , &apos;Approved&apos;),
ISPICKVAL( Governance_Status__c , &apos;Denied&apos;) 
),
 ISBLANK(Governance_Comments__c)
)</errorConditionFormula>
        <errorDisplayField>Governance_Comments__c</errorDisplayField>
        <errorMessage>Governance Comments field is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Make_Insight_Source_Other_Required</fullName>
        <active>false</active>
        <errorConditionFormula>ISPICKVAL( Insight_Source__c , &apos;Other&apos;)</errorConditionFormula>
        <errorDisplayField>Insight_Source_Other__c</errorDisplayField>
        <errorMessage>Insight Source Other field is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Make_MBO_Check_List_Other_Required</fullName>
        <active>false</active>
        <errorConditionFormula>INCLUDES( MBO_Check_List__c , &apos;Other&apos;)</errorConditionFormula>
        <errorDisplayField>MBO_Check_List_Other__c</errorDisplayField>
        <errorMessage>MBO Check List Other field is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Make_PlatformorSystem_Other_Required</fullName>
        <active>false</active>
        <errorConditionFormula>INCLUDES( Platform_System__c , &apos;Other&apos;)</errorConditionFormula>
        <errorDisplayField>Platform_System_Other__c</errorDisplayField>
        <errorMessage>Platform/System Other field is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Make_Project_Area_Focus_Other_Required</fullName>
        <active>false</active>
        <errorConditionFormula>INCLUDES( Project_Area_Focus__c , &apos;Other&apos;)</errorConditionFormula>
        <errorDisplayField>Project_Area_Focus_Other__c</errorDisplayField>
        <errorMessage>Project Area Focus Other field is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Make_Provider_Type_Other_Required</fullName>
        <active>false</active>
        <errorConditionFormula>INCLUDES( Provider_Type__c , &apos;Other&apos;)</errorConditionFormula>
        <errorDisplayField>Provider_Type_Other__c</errorDisplayField>
        <errorMessage>Provider Type Other field is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Make_SWAT_Awareness_of_Issue_Required</fullName>
        <active>false</active>
        <errorConditionFormula>ISPICKVAL( Insight_Source__c , &apos;SWAT&apos;)</errorConditionFormula>
        <errorMessage>SWAT Awareness of Issue? field is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Make_SWAT_ContactorPartner_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL( SWAT_Awareness_of_Issue__c , &apos;Yes&apos;),
 ISBLANK(SWAT_Contact_Partner__c) 
)</errorConditionFormula>
        <errorDisplayField>SWAT_Contact_Partner__c</errorDisplayField>
        <errorMessage>SWAT Contact/Partner field is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Make_if_not_why_required</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
ISPICKVAL( Will_this_be_closed_in_Practice_Mgmt__c , &apos;No&apos;),
 ISBLANK( If_no_why_not__c ) 
)</errorConditionFormula>
        <errorDisplayField>If_no_why_not__c</errorDisplayField>
        <errorMessage>Please enter &quot;if not why not&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Make_required_Provider_Was_contacted</fullName>
        <active>false</active>
        <errorConditionFormula>ISPICKVAL( Submitter_to_Contact_Provider_at_Closure__c , &apos;Yes&apos;) &amp;&amp; 
NOT(ISPICKVAL( Provider_Was_contacted__c , &apos;Submitter to Contact Provider&apos;))</errorConditionFormula>
        <errorDisplayField>Provider_Was_contacted__c</errorDisplayField>
        <errorMessage>Please make Provider Was contracted? to &quot;Submitter to Contact Provider&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_reference_is_checked</fullName>
        <active>false</active>
        <description>if No Reference #; Facilitated Referral box is checked then original reference number should not be blank</description>
        <errorConditionFormula>AND( 
    No_Reference_Facilitated_Referral__c ,
    
        NOT(ISBLANK(Original_Reference_Number__c))
   
)</errorConditionFormula>
        <errorMessage>If No Reference  Facilitated Referral box is checked then original reference number should be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_reference_is_not_checked</fullName>
        <active>false</active>
        <description>if No Reference #; Facilitated Referral box is not checked then original reference number should be blank</description>
        <errorConditionFormula>AND(
    NOT(No_Reference_Facilitated_Referral__c),
     ISBLANK(Original_Reference_Number__c
))</errorConditionFormula>
        <errorMessage>If No Reference  Facilitated Referral box is not checked then original reference number should not be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Region_V_Work_Type_is_required</fullName>
        <active>false</active>
        <description>Region V Work Type is required when specialty team selected &quot;Region V&quot;</description>
        <errorConditionFormula>AND(
    ISPICKVAL( Specialty_Team__c , &apos;Region V&apos;),
    ISBLANK(TEXT(Region_V_Work_Type__c))
)</errorConditionFormula>
        <errorDisplayField>Region_V_Work_Type__c</errorDisplayField>
        <errorMessage>Region V Work Type is required when specialty team is Region V</errorMessage>
    </validationRules>
</CustomObject>